class Main {
  public static void main(String[] args) {
      Buffer buf = new Buffer(14, 3);
      buf.initialize();
  }
}
